# litestar_app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  app.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
src/: __init__.py  app.py  config.py  controllers.py  dtos.py  exceptions.py  logger.py  middleware.py  models.py  routers.py
src/controllers/: __init__.py  author_controller.py  book_controller.py
src/db/: connection.py  dtos.py  models.py  repositories.py
src/db/migrations/: env.py
src/db/migrations/versions/: 8a5c48bf3a89_create_initial_book_and_author_tables.py
src/models/: __init__.py  author_models.py  base_models.py  book_models.py
src/tests/: client_fixtures.py  conftest.py  db_config.py  db_fixtures.py  test_books_api.py
src/tests/test_api/: test_books_api.py
tests/test_api/: conftest.py  test_authors_api.py
