[project]
name = "litestar-project-template"
version = "0.1.0"
description = "Template to start with litestar framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "litestar[sqlalchemy,standard,structlog]>=2.12.1",
  "environs>=11.0.0",
  "psycopg[binary]>=3.2.3",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.6.8",
  "black>=24.8.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["D203", "D213", "TCH001", "TCH002", "TCH003", "RUF012"]
line-length = 79
exclude = ["migrations", "tests"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = [
  "--tb=long",
  "--strict-markers",
  "-vv",
  "--cov-report=term-missing",
  "--cov=.",
]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
log_cli_level = "WARNING"
log_level = "WARNING"

[tool.coverage.report]
fail_under = 10
skip_empty = true
skip_covered = true
